KDevelop documentation is starting to enter the XXI century!

--- a/parts/autoproject/README
+++ b/parts/autoproject/README
@@ -1,53 +1,1 @@
-Autoprojectpart is a projectmanager for Automake based projects. 
-
-Loads and maintains Makefile.am files. The Autoprojectpart
-supports creating subprojects, targets, services (.desktop) and applications (.desktop).
-Automake projects can be configured on subprojects, targets (except DATA and HEADER targets).
-It will regenerate the projects Makefile.am files dynamically as you add or 
-reconfigure subprojects**. Unsupported automake features will be left unchanged
-(hopefully), no major testing has been run yet (at least not by myself).
-
-Maintainer: Victor Röder <victor_roeder@gmx.de>
-Lastest changes: 12/13/02
-
-TODO (taken from TODO file):
--> automake part:
-  - Should be able to DND files from other targets / file list / konq
-    to add to targets.
-  - Doesn't always get lib path relative to $top_buildir correct.
-    (projectDirectory() != $(top_builddir) in general)
-  - Probably some Makefile.am entries should not be written if they are
-    empty (DEPENDENCIES, ... what else?)
-  - Allow to remove everything you can add (subprojects, targets, etc...)
-	-> Removing targets done**
-  - Add shortcuts to all functions
-  - Repair the "Target:" label of several dialogs
-**)
-KNOWN BUGS:
--> Lower Automake Manager view does not update it's view when adding a subproject (and targets,
-	etc to the new subproject)
--> [FIXED] When removing a target with "Remove files from disc" checked, check other target, e.g. "noinst_HEADER" if
-	a file that has been deleted is listed there.
--> [FIXED] When removing a target the prefix and primary should not be deleted when there are other targets mentioned
--> [FIXED] Remove Target seems to emit removedFilesFromProject wrong. No files with relative paths???
--> If removing the Active Target, update the .kdevelop file, too!
-
-	
-NOTE:
----
-If you want to change  the default implemention for running/starting the binary 
-please add the following to your project file
-
-<kdevautoproject>
-  <run>
-   <disable_default>true</disable_default>
-  </run>
-</kdevautoproject>
-
-with this configuration the "Automake Manager" doesn't insert the menuentry "execute program" 
-and doesn't show the "Run Options" in the project configuration.
-
-Now you can implement this features with your own special plugin.
-For an example please look at the projects generated for GBA using the VisualBoy Advance Plugin. 
-This plugin starts a GBA binary with an emulator. -- smeier@kdevelop.org
----
+Please read the autoprojectpart.cpp file
