--- a/parts/bookmarks/README
+++ b/parts/bookmarks/README
@@ -1,24 +1,1 @@
-libkdevbookmarks
--------------
-
-This plugin provides a navigation view for bookmarks and
-persistance to editor bookmarks in such a way that it is
-possible to have bookmarks in files that are not open and,
-when implemented, that these bookmarks are saved with the
-project.
-
-by Jens Dagerbo <jens.dagerbo@swipnet.se> aka teatime
-
-
-Known bugs / limitations:
-
-# Pre KDE-3.2 / KDE-3.1.3, using source reformatting, or
-the ReplacePart will result in katepart messing up bookmarks
-(and breakpoints). There is no current workaround.
-
-
-Planned development:
-
-# Grouping of bookmarks (?)
-
-# Possibility of adding a "comment" to a bookmark (?)
+Please read the bookmarks_part.cpp file
