--- a/parts/trollproject/todo
+++ b/parts/trollproject/todo
@@ -3,6 +3,7 @@ Priority (1 to 5) - 1 being top priority.
 * Ability to remove subprojects (priority 1-2)
   Remove subproject should be a context-choice in the project overview
   treeview. (softly only - no deleting files and directories)
+  - DONE (by Tobias Glaesser)
 
 * Relative directories (priority 1)
   By default a qmake projects created with kdevelop must be distributable,
