--- a/parts/clearcase/README.dox
+++ b/parts/clearcase/README.dox
@@ -23,9 +23,9 @@ To use clearcase functions, you need to:
 
 \authors <a href="mailto:ajay_guleria at yahoo dot com">Ajay Guleria</a>
 
-\features Integrates Clearcase configuration management system into KDevelop.
-\features Provided a dialog for checkout and checkin comments.
-\features If selected file is not a clearcase file, "ClearCase" menu does not appear
+\feature Integrates Clearcase configuration management system into KDevelop.
+\feature Provided a dialog for checkout and checkin comments.
+\feature If selected file is not a clearcase file, "ClearCase" menu does not appear
     in the popup. A filename must start with /view or /vobs to qualify as a
     clearcase filename.
 
